# src/routes/v1/auth.routes.ts
@@ -7,6 +7,7 @@ import {
   register,
   verifySession,
   resetPassword,
+  validateOTP,
 } from '@/controllers/auth.controller';
 import { validateRequest } from '@/middlewares/validateRequest';
 import {
@@ -15,6 +16,7 @@ import {
   loginValidation,
   registerValidation,
   resetPasswordValidation,
+  validateOTPValidation,
 } from '@/validations';
 
 const router = Router();
@@ -23,7 +25,8 @@ router.post('/check-user', validateRequest(checkUserValidation), checkUser);
 router.post('/login', validateRequest(loginValidation), login);
 router.post('/register', validateRequest(registerValidation), register);
 router.post('/forgot-password', validateRequest(forgotPasswordValidation), forgotPassword);
+router.post('/validate-otp', validateRequest(validateOTPValidation), validateOTP);
 router.get('/verify-session', verifySession);
-router.post('/reset-password', validateRequest(resetPasswordValidation), resetPassword)
+router.post('/reset-password', validateRequest(resetPasswordValidation), resetPassword);
 
 export default router;
